--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(SOURCE_DIR
 )
 set(PROJECT_SOURCE
     ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/pktnn_mnist.cpp ${SOURCE_DIR}/pktnn_mnist.h
 )
+
 set(LIBRARIES_DIR
     libs
 )
