--- a/libs/pocketnn/CMakeLists.txt
+++ b/libs/pocketnn/CMakeLists.txt
@@ -10,23 +10,26 @@ set(LIBRARY_HEADERS_DIR
     include/${LIBRARY_NAME}
 )
 set(LIBRARY_HEADERS
-    ${LIBRARY_HEADERS_DIR}/pocketnn.h
+    ${LIBRARY_HEADERS_DIR}/pktnn.h
     ${LIBRARY_HEADERS_DIR}/pktnn_consts.h
     ${LIBRARY_HEADERS_DIR}/pktnn_mat.h
     ${LIBRARY_HEADERS_DIR}/pktnn_loader.h
     ${LIBRARY_HEADERS_DIR}/pktnn_mat3d.h
     ${LIBRARY_HEADERS_DIR}/pktnn_actv.h
+    ${LIBRARY_HEADERS_DIR}/pktnn_fc.h
+    ${LIBRARY_HEADERS_DIR}/pktnn_layer.h
 )
 set(LIBRARY_SOURCE_DIR
     src
 )
 set(LIBRARY_SOURCE
-    ${LIBRARY_SOURCE_DIR}/pocketnn.cpp
     ${LIBRARY_SOURCE_DIR}/pktnn_tools.cpp
     ${LIBRARY_SOURCE_DIR}/pktnn_mat.cpp
     ${LIBRARY_SOURCE_DIR}/pktnn_loader.cpp
     ${LIBRARY_SOURCE_DIR}/pktnn_mat3d.cpp
     ${LIBRARY_SOURCE_DIR}/pktnn_actv.cpp
+    ${LIBRARY_SOURCE_DIR}/pktnn_fc.cpp
+    ${LIBRARY_SOURCE_DIR}/pktnn_layer.cpp
 )
 
 project(${PROJECT_NAME})
